[package]
name = "hello-rust"
version = "0.1.0"
authors = ["marcusguttenplan <marcusguttenplan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sys-info = "0.9"
gotham = "0.6.0"
pnet = "0.27.2"
mime = "0.3"
serde = "1"
serde_derive = "1"
serde_json = "1"
